--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "devDependencies": {
     "@types/c3": "0.0.35",
-    "c3": "^0.4.11"
+    "@types/jquery": "^2.0.33",
+    "c3": "^0.4.11",
+    "jquery": "^3.1.1"
   }
 }
